# kytea

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  appveyor.yml  configure  configure.ac  kytea.gyp  kytea.pc.in
build-win/: build-kytea.txt  common.gypi  kytea.gyp  kytea.sln  kytea.vcxproj  kytea.vcxproj.filters  libkytea.vcxproj  libkytea.vcxproj.filters  train-kytea.vcxproj  train-kytea.vcxproj.filters
data/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
src/api/: Makefile.am  api-example.cpp
src/include/: Makefile.am  Makefile.in
src/include/kytea/: config.h  config.h.in  corpus-io-eda.h  corpus-io-format.h  corpus-io-full.h  corpus-io-part.h  corpus-io-prob.h  corpus-io-raw.h  corpus-io-tokenized.h  corpus-io.h  dictionary.h  feature-io.h  feature-lookup.h  feature-vector.h  general-io.h  kytea-config.h  kytea-lm.h  kytea-model.h  kytea-string.h  kytea-struct.h  kytea-util.h  kytea.h  model-io-binary.h  model-io-format.h  model-io-text.h  model-io.h  string-util-map-euc.h  string-util-map-sjis.h  string-util-map-utf8.h  string-util.h
src/lib/: Makefile.am  Makefile.in  corpus-io-eda.cpp  corpus-io-full.cpp  corpus-io-part.cpp  corpus-io-prob.cpp  corpus-io-raw.cpp  corpus-io-tokenized.cpp  corpus-io.cpp  dictionary.cpp  feature-io.cpp  feature-lookup.cpp  general-io.cpp  kytea-config.cpp  kytea-lm.cpp  kytea-model.cpp  kytea-string.cpp  kytea-struct.cpp  kytea-util.cpp  kytea.cpp  model-io.cpp  string-util.cpp
src/lib/liblinear/: Makefile.am  Makefile.in  linear.cpp
src/lib/liblinear/blas/: Makefile.am  Makefile.in
src/test/: Makefile.am  test-analysis.h  test-base.h  test-corpusio-euc.h  test-corpusio-sjis.h  test-corpusio.h  test-kytea.cpp  test-kytea.h  test-sentence.h
tools/kytea-active/: README-en  README-ja  makeannot.sh  makemodel.sh  saveannot.sh
tools/kytea-active/data/: wiki-sample.word
tools/kytea-active/script/: create-annot-point.pl  create-annot-word.pl  merge-annot.pl  splitchars.pl
