nobase_include_HEADERS = kytea/corpus-io.h kytea/dictionary.h \
    kytea/general-io.h kytea/kytea-config.h kytea/kytea-model.h \
    kytea/kytea-string.h kytea/kytea-struct.h kytea/kytea.h \
    kytea/model-io.h kytea/string-util.h kytea/kytea-lm.h \
    kytea/config.h kytea/feature-io.h kytea/feature-lookup.h
