nobase_include_HEADERS = kytea/config.h \
	kytea/corpus-io.h \
	kytea/corpus-io-eda.h \
	kytea/corpus-io-full.h \
	kytea/corpus-io-part.h \
	kytea/corpus-io-prob.h \
	kytea/corpus-io-raw.h \
	kytea/corpus-io-tokenized.h \
	kytea/dictionary.h \
	kytea/feature-io.h \
	kytea/feature-lookup.h \
	kytea/feature-vector.h \
	kytea/general-io.h \
	kytea/kytea-config.h \
	kytea/kytea.h \
	kytea/kytea-lm.h \
	kytea/kytea-model.h \
	kytea/kytea-string.h \
	kytea/kytea-struct.h \
	kytea/kytea-util.h \
	kytea/model-io.h \
	kytea/model-io-binary.h \
	kytea/model-io-text.h \
	kytea/string-util.h \
	kytea/string-util-map-euc.h \
	kytea/string-util-map-sjis.h \
	kytea/string-util-map-utf8.h
